--- a/apps/weather_web/assets/package.json
+++ b/apps/weather_web/assets/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^2.1.1",
