--- a/apps/weather_web/assets/package.json
+++ b/apps/weather_web/assets/package.json
@@ -14,18 +14,23 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@tailwindcss/custom-forms": "^0.2.1",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
+    "acorn": ">=5.7.4",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^2.1.1",
-    "glob-all": "^3.1.0",
+    "glob-all": "^3.2.1",
+    "kind-of": ">=6.0.3",
     "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "minimist": ">=1.2.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^1.6.0",
+    "serialize-javascript": ">=2.1.1",
     "tailwindcss": "^1.1.2",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
 }
