--- a/apps/weather_web/assets/package.json
+++ b/apps/weather_web/assets/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.0.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "acorn": ">=5.7.4",
@@ -24,6 +25,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "minimist": ">=1.2.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^1.6.0",
     "serialize-javascript": ">=2.1.1",
