--- a/apps/weather_web/assets/package.json
+++ b/apps/weather_web/assets/package.json
@@ -2,7 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "webpack --mode production",
+    "deploy": "NODE_ENV=production webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "@tailwindcss/custom-forms": "^0.2.1",
     "acorn": ">=5.7.4",
     "autoprefixer": "^9.7.6",
@@ -27,7 +28,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "purgecss-webpack-plugin": "^1.6.0",
     "serialize-javascript": ">=2.1.1",
     "tailwindcss": "^1.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
